--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -444,18 +444,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
-   "id": "b6a07a0f-f8b0-4242-9fd0-b760bbb75379",
+   "execution_count": 496,
+   "id": "051e9556-bdd1-4cc9-9f58-67a4bad7afef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1126804658.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[496], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    data='glob.glob('**/*.txt')'\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "rename_my_file(glob.glob('**/*.txt'))"
+    "data='glob.glob('**/*.txt')'\n",
+    "filename=os.path.split('glob.glob('**/*.txt')')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc29ee69-af30-4073-acb9-c15409a665b4",
+   "id": "670bb0e3-7d4b-4aef-b003-bbc286ff035f",
    "metadata": {},
    "outputs": [],
    "source": []
