--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "eaa87377-d741-4da6-8fd0-3dc128925d69",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "a31f44de-8d76-4fe7-bd10-27c469066cb0",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "d57d64ae-026b-4b63-8f15-229406644ed2",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "7fe66229-0de1-4972-8a96-1a3436b1924a",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "'04'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "e67bd1b2-3925-4c6f-87e1-62df870cbfdd",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "'10'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "57549701-5466-4962-9512-a17860e52df0",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "91318f31-0924-4689-8455-4f584f2d93b4",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "09c0fba9-64db-43ba-8cff-04c9a92d1357",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "5c6b7c63-056f-43d5-b108-f0295b2dab38",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "'10-08_singapore.txt'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "aeece37d-c0b4-416e-abe4-1bb53bcb32ae",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "'05-15_dhaka.txt'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "4f2de195-e3b6-4ccd-aa80-b609a0cc54f8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "efd2bcb2-5425-461c-a238-6145ec846f8f",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "f49baee4-fad7-4f12-b56e-18980002e7d0",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        " 'os-collaboration-exercise-data\\\\sep-29_osaka.txt']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "2cbfe108-05fc-48db-94d5-71a3100a5cb9",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "d3f4569e-900d-465b-a5ee-96438d5b0428",
    "metadata": {},
    "outputs": [],
@@ -675,34 +675,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "id": "212e7b0b-7728-4285-8b6a-5634734b1aea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "1671129f-47c6-46cb-b655-44a6aadc3df4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileExistsError",
-     "evalue": "[WinError 183] Cannot create a file when that file already exists: 'city'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[52], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m city \u001b[38;5;129;01min\u001b[39;00m cities:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     path\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(cityname,rename_my_file(cleaned_files))\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCreating\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] Cannot create a file when that file already exists: 'city'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CreatingCity\\Cairo\n",
+      "CreatingCity\\Dhaka\n",
+      "CreatingCity\\Jakarta\n",
+      "CreatingCity\\Karachi\n",
+      "CreatingCity\\Manila\n",
+      "CreatingCity\\Melbourne\n",
+      "CreatingCity\\Osaka\n",
+      "CreatingCity\\Shanghai\n",
+      "CreatingCity\\Singapore\n",
+      "CreatingCity\\Tokyo\n"
      ]
     }
    ],
    "source": [
     "for city in cities:\n",
-    "    os.mkdir('city')\n",
-    "    path=os.path.join(cityname,rename_my_file(cleaned_files))\n",
+    "    if not os.path.exists(\"City\"):\n",
+    "        os.mkdir('City')\n",
+    "    path=os.path.join('City',city)\n",
     "    print(f'Creating{path}')\n",
-    "    os.mkdir(path)"
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "db093c31-9a17-45dc-b3ae-e4777ff199bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n",
+      "copied file to City\\Cairo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for files in glob.glob('**/*cairo.txt'):\n",
+    "    path_to_destination = os.path.join('City', 'Cairo')\n",
+    "    shutil.copy(files,path_to_destination)\n",
+    "    print(f'copied file to {path_to_destination}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db093c31-9a17-45dc-b3ae-e4777ff199bf",
+   "id": "8c3033f2-bf8f-47bb-9d85-0c92a1a38a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for files in glob.glob('**/*.txt'):\n",
+    "    path_to_destination = os.path.join('City',"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3607d42c-9e4e-400e-8204-465e095f656a",
    "metadata": {},
    "outputs": [],
    "source": []
