--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "eaa87377-d741-4da6-8fd0-3dc128925d69",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "a31f44de-8d76-4fe7-bd10-27c469066cb0",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "d57d64ae-026b-4b63-8f15-229406644ed2",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "7fe66229-0de1-4972-8a96-1a3436b1924a",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "'04'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "e67bd1b2-3925-4c6f-87e1-62df870cbfdd",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "'10'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "57549701-5466-4962-9512-a17860e52df0",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "91318f31-0924-4689-8455-4f584f2d93b4",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "09c0fba9-64db-43ba-8cff-04c9a92d1357",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "5c6b7c63-056f-43d5-b108-f0295b2dab38",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "'10-08_singapore.txt'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "aeece37d-c0b4-416e-abe4-1bb53bcb32ae",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "'05-15_dhaka.txt'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "4f2de195-e3b6-4ccd-aa80-b609a0cc54f8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "efd2bcb2-5425-461c-a238-6145ec846f8f",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "f49baee4-fad7-4f12-b56e-18980002e7d0",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        " 'os-collaboration-exercise-data\\\\sep-29_osaka.txt']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "2cbfe108-05fc-48db-94d5-71a3100a5cb9",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "id": "a4cd51f5-8bdc-4ad4-9c80-41398b29f59a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "d3f4569e-900d-465b-a5ee-96438d5b0428",
    "metadata": {},
    "outputs": [],
@@ -683,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "1671129f-47c6-46cb-b655-44a6aadc3df4",
    "metadata": {},
    "outputs": [
@@ -715,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "db093c31-9a17-45dc-b3ae-e4777ff199bf",
    "metadata": {},
    "outputs": [
@@ -755,12 +763,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8c3033f2-bf8f-47bb-9d85-0c92a1a38a5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (4289215547.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[18], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    path_to_destination = os.path.join('City',\u001b[0m\n\u001b[1;37m                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "for files in glob.glob('**/*.txt'):\n",
+    "    if file==\n",
     "    path_to_destination = os.path.join('City',"
    ]
   },
@@ -768,6 +786,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3607d42c-9e4e-400e-8204-465e095f656a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca60fad-318c-4fde-a98a-1eac40e291ce",
    "metadata": {},
    "outputs": [],
    "source": []
