--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "63aa918c-4484-4d35-89c1-852bbd73feba",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? Laura\n"
+      "What is your name? laura\n"
      ]
     },
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "id": "4dec66b6-a343-416a-8a29-7e490f95b0a2",
    "metadata": {},
    "outputs": [
@@ -210,32 +210,33 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score. 21\n"
+      "Enter the student's score: 79\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please key in a number\n",
       "The student's letter grade is: A\n"
      ]
     }
    ],
    "source": [
-    "user_input1 = int(input(\"Enter the student's score.\"))\n",
-    "grades=user_input1\n",
-    "if 70<=user_input1<=100:\n",
-    "    grade=\"A\"\n",
-    "elif 50<=user_input1<=69:\n",
-    "    grade=\"B\"\n",
-    "elif 35<=user_input1<=49:\n",
-    "    grade=\"C\"\n",
-    "elif type(user_input1) != int():\n",
-    "    print (\"Please key in a number\")\n",
-    "else: \n",
-    "    grade=\"D\"\n",
-    "print(f\"The student's letter grade is: {grade}\" ) \n"
+    "try:\n",
+    "    user_input1 = int(input(\"Enter the student's score:\"))\n",
+    "    grade =user_input1\n",
+    "    if 70<=user_input1<=100:\n",
+    "        grade=\"A\"\n",
+    "    elif 50<=user_input1<=69:\n",
+    "        grade=\"B\"\n",
+    "    elif 35<=user_input1<=49:\n",
+    "        grade=\"C\"\n",
+    "    else: \n",
+    "        grade=\"D\"\n",
+    "except ValueError:\n",
+    "    print(\"Please key in a valid number.\")\n",
+    "    grade= 'None'\n",
+    "print(f\"The student's letter grade is: {grade}\" )\n"
    ]
   },
   {
