--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "5c4ba854-501c-4eed-8e52-7c953a35b844",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "fd81543f-a835-46b7-af15-d9c5b12ba637",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "8c448d71-7a4f-4995-a26e-db21abb286f8",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "ef470f1e-f2ff-4a3b-a785-5447a6e45406",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "0b2aca4a-24bc-42bd-8ef0-ac34f7246ad4",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "ced7bab5-7afb-4844-8b5d-a1973d862798",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "279fc77c-c5db-4f2c-8d40-9f1c3dd70663",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "e995ae08-05cb-47b5-9c20-6b68d22d7b33",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "49f2318e-bbba-459c-9260-85b2d63eaa9d",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "0c3f3e94-c4aa-4b15-a7b9-acffa22b877d",
    "metadata": {},
    "outputs": [
@@ -260,28 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "id": "d8bc2bfc-3fb8-411f-b541-63962aaf2b27",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.98717966])"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.98717966]\n"
+     ]
     }
    ],
    "source": [
-    "covariance/[(S1)*(S2)]"
+    "print(covariance/[(S1)*(S2)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "id": "293ddf60-50e5-4456-9ac1-d616b4793073",
    "metadata": {},
    "outputs": [
@@ -292,7 +289,7 @@
        "       [0.98717966, 1.        ]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,6 +302,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87cb467e-bb62-4524-9010-38967bf6ca98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094f9a74-1fc2-44cf-93d2-cb7ec2b8fd60",
    "metadata": {},
    "outputs": [],
    "source": []
