--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "86bf0911-0c7b-4e18-8dfd-3c4160f529d2",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7698fcc6-9daf-4d74-a465-34c74d577e79",
    "metadata": {},
    "outputs": [],
@@ -44,31 +44,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "0e3e9ff9-5828-416b-8b08-02d50e54edc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "temp_farenheit=(temp_celsius*2+10)"
+    "temp_farenheit=(temp_celsius*9/5+32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "4a475c33-e594-4015-a31e-89c21cfda792",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 10  20  30  40  50  60  70  80  90 100 110]\n"
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to numpy.ndarray.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mtemp_farenheit\u001b[49m\u001b[38;5;132;43;01m:\u001b[39;49;00m\u001b[38;5;124;43m.2f\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to numpy.ndarray.__format__"
      ]
     }
    ],
    "source": [
-    "print(temp_farenheit)"
+    "print(f'{temp_farenheit:.2f}')"
    ]
   },
   {
