corrections done (ignore previous)

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "86bf0911-0c7b-4e18-8dfd-3c4160f529d2",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "7698fcc6-9daf-4d74-a465-34c74d577e79",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "b66a6e5e-8608-491e-9773-6c9b69ee1146",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "0e3e9ff9-5828-416b-8b08-02d50e54edc6",
    "metadata": {},
    "outputs": [],
@@ -55,29 +55,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "4a475c33-e594-4015-a31e-89c21cfda792",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to numpy.ndarray.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mtemp_farenheit\u001b[49m\u001b[38;5;132;43;01m:\u001b[39;49;00m\u001b[38;5;124;43m.2f\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to numpy.ndarray.__format__"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 32.  41.  50.  59.  68.  77.  86.  95. 104. 113. 122.]\n"
      ]
     }
    ],
    "source": [
-    "print(f'{temp_farenheit:.2f}')"
+    "print(temp_farenheit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "f1f4f07b-2aca-4092-b1a4-d084e0f35ee2",
    "metadata": {},
    "outputs": [
@@ -85,17 +81,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 10\n",
-      "5 20\n",
-      "10 30\n",
-      "15 40\n",
-      "20 50\n",
-      "25 60\n",
-      "30 70\n",
-      "35 80\n",
-      "40 90\n",
-      "45 100\n",
-      "50 110\n"
+      "0 32.0\n",
+      "5 41.0\n",
+      "10 50.0\n",
+      "15 59.0\n",
+      "20 68.0\n",
+      "25 77.0\n",
+      "30 86.0\n",
+      "35 95.0\n",
+      "40 104.0\n",
+      "45 113.0\n",
+      "50 122.0\n"
      ]
     }
    ],
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "4ab078c1-8df3-4c65-bef4-5d31153ffddf",
    "metadata": {},
    "outputs": [
@@ -135,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "id": "f5ac33cf-42ec-4e7b-9736-c87984230c1e",
    "metadata": {},
    "outputs": [
@@ -168,18 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "08ebed78-8e7a-4f34-85ea-3508e8e5f029",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.8797613 , 0.76555271, 0.31186651, 0.64703074, 0.19571385,\n",
-       "       0.51929088, 0.25821402, 0.15898631, 0.78225391, 0.85513872])"
+       "array([0.81580861, 0.95937851, 0.69602747, 0.16804386, 0.64621326,\n",
+       "       0.74693288, 0.03969503, 0.28555683, 0.59855066, 0.46504357])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "id": "a06c4607-4ace-4980-b1fc-49e516e9c3e7",
    "metadata": {},
    "outputs": [],
@@ -200,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 37,
    "id": "c492529f-1815-46ab-916f-375aba6d0c75",
    "metadata": {},
    "outputs": [
@@ -208,14 +204,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment 1:\tNo.of Heads=5\n",
-      "Experiment 2:\tNo.of Heads=4\n",
-      "Experiment 3:\tNo.of Heads=5\n",
-      "Experiment 4:\tNo.of Heads=6\n",
-      "Experiment 5:\tNo.of Heads=5\n",
-      "Experiment 6:\tNo.of Heads=6\n",
-      "Experiment 7:\tNo.of Heads=5\n",
-      "Experiment 8:\tNo.of Heads=7\n",
+      "Experiment 1:\tNo.of Heads=4\n",
+      "Experiment 2:\tNo.of Heads=6\n",
+      "Experiment 3:\tNo.of Heads=6\n",
+      "Experiment 4:\tNo.of Heads=3\n",
+      "Experiment 5:\tNo.of Heads=7\n",
+      "Experiment 6:\tNo.of Heads=5\n",
+      "Experiment 7:\tNo.of Heads=4\n",
+      "Experiment 8:\tNo.of Heads=6\n",
       "Experiment 9:\tNo.of Heads=5\n",
       "Experiment 10:\tNo.of Heads=5\n",
       "\n",
